# xin-wen-lian-bo

./: .gitignore  README.md  TECHNICAL.md  analyze_news.py  main.py  pyproject.toml
.github/workflows/: README.md  update.yml
.specify/memory/: constitution.md
llm_analysis/: README.md  __init__.py  config.py
llm_analysis/models/: __init__.py  analysis.py  recommendation.py  sentiment.py  trend.py
llm_analysis/services/: __init__.py  analyzer.py  feishu_notifier.py  llm_client.py  news_reader.py  recommendation_engine.py  (+2 more)
news/: 20260111.md  20260112.md  20260113.md  20260114.md  20260115.md  20260116.md  20260117.md  20260118.md  20260119.md  20260120.md  20260121.md  20260122.md  20260123.md  20260124.md  20260125.md  20260126.md  20260127.md  20260128.md  20260129.md  20260130.md  20260131.md  20260201.md  20260202.md  20260203.md  20260204.md  20260205.md  20260206.md  20260207.md  20260208.md  20260209.md  20260210.md  20260211.md  20260212.md  20260213.md  20260214.md  20260215.md  20260216.md  20260217.md  20260218.md  20260219.md  (+110 more)
results/: 20250109.md  20250110.md  20250111.md  20260111.md  20260112.md  20260113.md  20260114.md  20260115.md  20260116.md  20260117.md  20260118.md  20260119.md  20260120.md  20260121.md  20260122.md  20260123.md  20260124.md  20260125.md  20260126.md  20260127.md  20260128.md  20260129.md  20260130.md  20260131.md  20260201.md  20260202.md  20260203.md  20260204.md  20260205.md  20260206.md  20260207.md  20260208.md  20260209.md  20260210.md  20260211.md  20260212.md  20260213.md  20260214.md  20260215.md  20260216.md  (+110 more)
(+168 files in other folders)
